--- a/src/app/componentes/login-page/login-page.component.html
+++ b/src/app/componentes/login-page/login-page.component.html
@@ -1,3 +1,20 @@
-<p>
-  login-page works!
-</p>
+<div class="row">
+  <div class="col-md-6 mx-auto mt-3">
+    <div class="card">
+      <div class="card-body">
+        <h1 class="text-center">LOGIN</h1>
+        <form>
+          <div class="form-group"> 
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" class="form-control">
+          </div>
+          <div class="form-group">
+              <label for="password">Contraseña</label>
+              <input type="password" name="password" id="password" class="form-control">
+          </div>
+          <input type="text" value="Entrar" class="btn btn-primary btn-block btn-lg btn1">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
